--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://Maha-Abdelnabi.github.io/React-Portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
