--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://Maha-Abdelnabi.github.io/React-Portfolio",
+  "homepage": "https://maha-abdelnabi.github.io/React-Portfolio",
   "dependencies": {
     "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.5",
